# Fund-My-Cause

./: CHANGELOG.md  CONTRIBUTING.md  DECOMPOSITION_STATUS.md  README.md  REFACTORING_PLAN_832.md  package-lock.json
.github/workflows/: backend_ci.yml  contract-coverage.yml  contract-upgrade-test.yml  env-parity.yml  event-monitoring.yml  frontend_ci.yml  rust_ci.yml  shared_packages_ci.yml
apps/interface/: Dockerfile.analytics-job  jest.config.ts  package.json
apps/interface/scripts/: check-route-duplication.cjs
contracts/achievements/: Cargo.toml
contracts/achievements/src/: errors.rs  lib.rs
contracts/common/: Cargo.toml  README.md
contracts/common/src/: access_control.rs  error.rs  lib.rs  rbac.rs
contracts/crowdfund/src/: access.rs  errors.rs  (+11 more)
docs/: backend-architecture.md  backup-procedures.md  contract-api.md  contract-upgrade-testing.md  contributor-onboarding.md  environment-config.md  event-monitoring.md  feature-flags.md  graphql-api-interactive.md  rest-api-interactive.md
docs/adr/: ADR-001-pull-based-refund-model.md  ADR-002-off-chain-indexer-architecture.md  ADR-003-graphql-api-for-frontend-queries.md  README.md  template.md
e2e/: gamification.spec.ts
k8s/: analytics-cronjob.yaml
scripts/: backup-contract-state.sh  check-env-parity.js  monitor-events.sh  restore-contract-state.sh  setup-backup-automation.sh
sdks/js/: jest.config.js  package-lock.json  package.json
services/graphql-api/: .env.example  package-lock.json  package.json  vitest.config.ts
services/indexer/: README.md  eslint.config.js  package-lock.json  package.json
(+92 files in other folders)
